# NtupleOthello

./: CMakeLists.txt  README.md  eval.h  main.cpp  minmax.h  ntuples.h  position.h
